parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> SEM_CODE_STARTS DECLARATIONS FUNCTIONS program id SEM_PROGRAM_STARTS BLOCK SEM_FILL_ERAS SEM_PROGRAM_END
Rule 2     DECLARATIONS -> VARDEC DECLARATIONS
Rule 3     DECLARATIONS -> LISTDEC DECLARATIONS
Rule 4     DECLARATIONS -> empty
Rule 5     VARDEC -> var TYPE VARIDS semicolon
Rule 6     VARIDS -> id SEM_ADD_VAR
Rule 7     VARIDS -> id SEM_ADD_VAR comma VARIDS
Rule 8     LISTDEC -> list TYPE VARIDS semicolon
Rule 9     TYPE -> int SEM_STORE_TYPE
Rule 10    TYPE -> decimal SEM_STORE_TYPE
Rule 11    TYPE -> bool SEM_STORE_TYPE
Rule 12    FUNCTIONS -> FUNCTION FUNCTIONS
Rule 13    FUNCTIONS -> empty
Rule 14    FUNCTION -> function FUNCTYPE id SEM_ADD_FUNC lp FUNCPARAMETERS rp lk DECLARATIONS SEM_ADD_FUNC_START STATEMENTS rk SEM_END_FUNC
Rule 15    FUNCTYPE -> void SEM_STORE_TYPE
Rule 16    FUNCTYPE -> TYPE
Rule 17    FUNCPARAMETERS -> TYPE id SEM_ADD_PARAM
Rule 18    FUNCPARAMETERS -> TYPE id SEM_ADD_PARAM comma FUNCPARAMETERS
Rule 19    FUNCPARAMETERS -> empty
Rule 20    BLOCK -> lk STATEMENTS rk
Rule 21    STATEMENTS -> STATEMENT STATEMENTS
Rule 22    STATEMENTS -> empty
Rule 23    STATEMENT -> ASSIGN
Rule 24    STATEMENT -> READ
Rule 25    STATEMENT -> PRINT
Rule 26    STATEMENT -> FUNCCALL
Rule 27    STATEMENT -> CONDITION
Rule 28    STATEMENT -> LOOP
Rule 29    STATEMENT -> RETURN
Rule 30    ASSIGN -> id SEM_PUSH_OPERAND LISTINDEX equal SEM_PUSH_OPERATOR EXPRESSION SEM_ASSIGN semicolon
Rule 31    LISTINDEX -> lb EXP rb LISTINDEX
Rule 32    LISTINDEX -> empty
Rule 33    READ -> readto SEM_PUSH_OPERATOR lp id SEM_PUSH_OPERAND SEM_GEN_READ rp semicolon
Rule 34    PRINT -> print SEM_PUSH_OPERATOR lp EXPRESSION rp SEM_PRINT semicolon
Rule 35    FUNCCALL -> id SEM_VERIFY_FUNC lp SEM_GEN_ERA CALLPARAMETERS rp SEM_VERIFY_NUM_PARAMS semicolon SEM_GEN_GOSUB
Rule 36    CALLPARAMETERS -> EXPRESSION SEM_MATCH_PARAM
Rule 37    CALLPARAMETERS -> EXPRESSION SEM_MATCH_PARAM comma CALLPARAMETERS
Rule 38    CALLPARAMETERS -> empty
Rule 39    CONDITION -> if lp EXPRESSION rp SEM_GEN_GOTOF BLOCK ELSEBLOCK SEM_FILL_END
Rule 40    ELSEBLOCK -> else SEM_GENANDFILL_GOTO BLOCK
Rule 41    ELSEBLOCK -> empty
Rule 42    LOOP -> while SEM_PUSH_START lp EXPRESSION rp SEM_GEN_GOTOF BLOCK SEM_FILL_LOOP
Rule 43    RETURN -> return EXPRESSION SEM_RETURN semicolon
Rule 44    EXPRESSION -> NOT SUPEREXP SEM_RESOLVE_NOT
Rule 45    EXPRESSION -> NOT SUPEREXP SEM_RESOLVE_NOT and SEM_PUSH_OPERATOR NOT SUPEREXP SEM_RESOLVE_NOT SEM_RESOLVE_ANDOR
Rule 46    EXPRESSION -> NOT SUPEREXP SEM_RESOLVE_NOT or SEM_PUSH_OPERATOR NOT SUPEREXP SEM_RESOLVE_NOT SEM_RESOLVE_ANDOR
Rule 47    NOT -> not SEM_PUSH_OPERATOR
Rule 48    NOT -> empty
Rule 49    SUPEREXP -> EXP
Rule 50    SUPEREXP -> EXP RELOP EXP SEM_RESOLVE_RELOP
Rule 51    RELOP -> gt SEM_PUSH_OPERATOR
Rule 52    RELOP -> ge SEM_PUSH_OPERATOR
Rule 53    RELOP -> lt SEM_PUSH_OPERATOR
Rule 54    RELOP -> le SEM_PUSH_OPERATOR
Rule 55    RELOP -> ee SEM_PUSH_OPERATOR
Rule 56    RELOP -> ne SEM_PUSH_OPERATOR
Rule 57    EXP -> TERM SEM_RESOLVE_PLUSMINUS
Rule 58    EXP -> TERM SEM_RESOLVE_PLUSMINUS plus SEM_PUSH_OPERATOR EXP
Rule 59    EXP -> TERM SEM_RESOLVE_PLUSMINUS minus SEM_PUSH_OPERATOR EXP
Rule 60    TERM -> FACTOR SEM_RESOLVE_TIMESDIVIDE
Rule 61    TERM -> FACTOR SEM_RESOLVE_TIMESDIVIDE times SEM_PUSH_OPERATOR TERM
Rule 62    TERM -> FACTOR SEM_RESOLVE_TIMESDIVIDE divide SEM_PUSH_OPERATOR TERM
Rule 63    FACTOR -> lp SEM_PUSH_PAREN EXPRESSION rp SEM_POP_PAREN
Rule 64    FACTOR -> CONSTANT
Rule 65    FACTOR -> plus CONSTANT
Rule 66    FACTOR -> minus CONSTANT
Rule 67    CONSTANT -> id SEM_PUSH_OPERAND LISTINDEX
Rule 68    CONSTANT -> id SEM_VERIFY_FUNC lp SEM_PUSH_PAREN SEM_GEN_ERA CALLPARAMETERS rp SEM_POP_PAREN SEM_VERIFY_NUM_PARAMS SEM_GEN_GOSUB_ASSIGN
Rule 69    CONSTANT -> c_int SEM_PUSH_CONSTANT
Rule 70    CONSTANT -> c_decimal SEM_PUSH_CONSTANT
Rule 71    CONSTANT -> c_string SEM_PUSH_CONSTANT
Rule 72    CONSTANT -> false SEM_PUSH_CONSTANT
Rule 73    CONSTANT -> true SEM_PUSH_CONSTANT
Rule 74    empty -> <empty>
Rule 75    SEM_CODE_STARTS -> empty
Rule 76    SEM_PROGRAM_STARTS -> empty
Rule 77    SEM_STORE_TYPE -> empty
Rule 78    SEM_ADD_FUNC -> empty
Rule 79    SEM_END_FUNC -> empty
Rule 80    SEM_GEN_READ -> empty
Rule 81    SEM_ADD_VAR -> empty
Rule 82    SEM_PUSH_OPERAND -> empty
Rule 83    SEM_PUSH_OPERATOR -> empty
Rule 84    SEM_RESOLVE_PLUSMINUS -> empty
Rule 85    SEM_RESOLVE_TIMESDIVIDE -> empty
Rule 86    SEM_PUSH_PAREN -> empty
Rule 87    SEM_POP_PAREN -> empty
Rule 88    SEM_ASSIGN -> empty
Rule 89    SEM_PUSH_CONSTANT -> empty
Rule 90    SEM_PRINT -> empty
Rule 91    SEM_RESOLVE_RELOP -> empty
Rule 92    SEM_RESOLVE_ANDOR -> empty
Rule 93    SEM_RESOLVE_NOT -> empty
Rule 94    SEM_GEN_GOTOF -> empty
Rule 95    SEM_GENANDFILL_GOTO -> empty
Rule 96    SEM_FILL_END -> empty
Rule 97    SEM_PUSH_START -> empty
Rule 98    SEM_FILL_LOOP -> empty
Rule 99    SEM_ADD_PARAM -> empty
Rule 100   SEM_ADD_FUNC_START -> empty
Rule 101   SEM_VERIFY_FUNC -> empty
Rule 102   SEM_GEN_ERA -> empty
Rule 103   SEM_MATCH_PARAM -> empty
Rule 104   SEM_VERIFY_NUM_PARAMS -> empty
Rule 105   SEM_GEN_GOSUB -> empty
Rule 106   SEM_GEN_GOSUB_ASSIGN -> empty
Rule 107   SEM_RETURN -> empty
Rule 108   SEM_PROGRAM_END -> empty
Rule 109   SEM_FILL_ERAS -> empty

Terminals, with rules where they appear

and                  : 45
bool                 : 11
c_decimal            : 70
c_int                : 69
c_string             : 71
comma                : 7 18 37
decimal              : 10
divide               : 62
ee                   : 55
else                 : 40
equal                : 30
error                : 
false                : 72
function             : 14
ge                   : 52
gt                   : 51
id                   : 1 6 7 14 17 18 30 33 35 67 68
if                   : 39
int                  : 9
lb                   : 31
le                   : 54
list                 : 8
lk                   : 14 20
lp                   : 14 33 34 35 39 42 63 68
lt                   : 53
minus                : 59 66
ne                   : 56
not                  : 47
or                   : 46
plus                 : 58 65
print                : 34
program              : 1
rb                   : 31
readto               : 33
return               : 43
rk                   : 14 20
rp                   : 14 33 34 35 39 42 63 68
semicolon            : 5 8 30 33 34 35 43
times                : 61
true                 : 73
var                  : 5
void                 : 15
while                : 42

Nonterminals, with rules where they appear

ASSIGN               : 23
BLOCK                : 1 39 40 42
CALLPARAMETERS       : 35 37 68
CONDITION            : 27
CONSTANT             : 64 65 66
DECLARATIONS         : 1 2 3 14
ELSEBLOCK            : 39
EXP                  : 31 49 50 50 58 59
EXPRESSION           : 30 34 36 37 39 42 43 63
FACTOR               : 60 61 62
FUNCCALL             : 26
FUNCPARAMETERS       : 14 18
FUNCTION             : 12
FUNCTIONS            : 1 12
FUNCTYPE             : 14
LISTDEC              : 3
LISTINDEX            : 30 31 67
LOOP                 : 28
NOT                  : 44 45 45 46 46
PRINT                : 25
PROGRAM              : 0
READ                 : 24
RELOP                : 50
RETURN               : 29
SEM_ADD_FUNC         : 14
SEM_ADD_FUNC_START   : 14
SEM_ADD_PARAM        : 17 18
SEM_ADD_VAR          : 6 7
SEM_ASSIGN           : 30
SEM_CODE_STARTS      : 1
SEM_END_FUNC         : 14
SEM_FILL_END         : 39
SEM_FILL_ERAS        : 1
SEM_FILL_LOOP        : 42
SEM_GENANDFILL_GOTO  : 40
SEM_GEN_ERA          : 35 68
SEM_GEN_GOSUB        : 35
SEM_GEN_GOSUB_ASSIGN : 68
SEM_GEN_GOTOF        : 39 42
SEM_GEN_READ         : 33
SEM_MATCH_PARAM      : 36 37
SEM_POP_PAREN        : 63 68
SEM_PRINT            : 34
SEM_PROGRAM_END      : 1
SEM_PROGRAM_STARTS   : 1
SEM_PUSH_CONSTANT    : 69 70 71 72 73
SEM_PUSH_OPERAND     : 30 33 67
SEM_PUSH_OPERATOR    : 30 33 34 45 46 47 51 52 53 54 55 56 58 59 61 62
SEM_PUSH_PAREN       : 63 68
SEM_PUSH_START       : 42
SEM_RESOLVE_ANDOR    : 45 46
SEM_RESOLVE_NOT      : 44 45 45 46 46
SEM_RESOLVE_PLUSMINUS : 57 58 59
SEM_RESOLVE_RELOP    : 50
SEM_RESOLVE_TIMESDIVIDE : 60 61 62
SEM_RETURN           : 43
SEM_STORE_TYPE       : 9 10 11 15
SEM_VERIFY_FUNC      : 35 68
SEM_VERIFY_NUM_PARAMS : 35 68
STATEMENT            : 21
STATEMENTS           : 14 20 21
SUPEREXP             : 44 45 45 46 46
TERM                 : 57 58 59 61 62
TYPE                 : 5 8 16 17 18
VARDEC               : 2
VARIDS               : 5 7 8
empty                : 4 13 19 22 32 38 41 48 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . SEM_CODE_STARTS DECLARATIONS FUNCTIONS program id SEM_PROGRAM_STARTS BLOCK SEM_FILL_ERAS SEM_PROGRAM_END
    (75) SEM_CODE_STARTS -> . empty
    (74) empty -> .

    var             reduce using rule 74 (empty -> .)
    list            reduce using rule 74 (empty -> .)
    function        reduce using rule 74 (empty -> .)
    program         reduce using rule 74 (empty -> .)

    empty                          shift and go to state 1
    PROGRAM                        shift and go to state 2
    SEM_CODE_STARTS                shift and go to state 3

state 1

    (75) SEM_CODE_STARTS -> empty .

    var             reduce using rule 75 (SEM_CODE_STARTS -> empty .)
    list            reduce using rule 75 (SEM_CODE_STARTS -> empty .)
    function        reduce using rule 75 (SEM_CODE_STARTS -> empty .)
    program         reduce using rule 75 (SEM_CODE_STARTS -> empty .)


state 2

    (0) S' -> PROGRAM .



state 3

    (1) PROGRAM -> SEM_CODE_STARTS . DECLARATIONS FUNCTIONS program id SEM_PROGRAM_STARTS BLOCK SEM_FILL_ERAS SEM_PROGRAM_END
    (2) DECLARATIONS -> . VARDEC DECLARATIONS
    (3) DECLARATIONS -> . LISTDEC DECLARATIONS
    (4) DECLARATIONS -> . empty
    (5) VARDEC -> . var TYPE VARIDS semicolon
    (8) LISTDEC -> . list TYPE VARIDS semicolon
    (74) empty -> .

    var             shift and go to state 9
    list            shift and go to state 6
    function        reduce using rule 74 (empty -> .)
    program         reduce using rule 74 (empty -> .)

    VARDEC                         shift and go to state 4
    DECLARATIONS                   shift and go to state 5
    empty                          shift and go to state 7
    LISTDEC                        shift and go to state 8

state 4

    (2) DECLARATIONS -> VARDEC . DECLARATIONS
    (2) DECLARATIONS -> . VARDEC DECLARATIONS
    (3) DECLARATIONS -> . LISTDEC DECLARATIONS
    (4) DECLARATIONS -> . empty
    (5) VARDEC -> . var TYPE VARIDS semicolon
    (8) LISTDEC -> . list TYPE VARIDS semicolon
    (74) empty -> .

    var             shift and go to state 9
    list            shift and go to state 6
    function        reduce using rule 74 (empty -> .)
    program         reduce using rule 74 (empty -> .)
    id              reduce using rule 74 (empty -> .)
    readto          reduce using rule 74 (empty -> .)
    print           reduce using rule 74 (empty -> .)
    if              reduce using rule 74 (empty -> .)
    while           reduce using rule 74 (empty -> .)
    return          reduce using rule 74 (empty -> .)
    rk              reduce using rule 74 (empty -> .)

    VARDEC                         shift and go to state 4
    DECLARATIONS                   shift and go to state 10
    LISTDEC                        shift and go to state 8
    empty                          shift and go to state 7

state 5

    (1) PROGRAM -> SEM_CODE_STARTS DECLARATIONS . FUNCTIONS program id SEM_PROGRAM_STARTS BLOCK SEM_FILL_ERAS SEM_PROGRAM_END
    (12) FUNCTIONS -> . FUNCTION FUNCTIONS
    (13) FUNCTIONS -> . empty
    (14) FUNCTION -> . function FUNCTYPE id SEM_ADD_FUNC lp FUNCPARAMETERS rp lk DECLARATIONS SEM_ADD_FUNC_START STATEMENTS rk SEM_END_FUNC
    (74) empty -> .

    function        shift and go to state 11
    program         reduce using rule 74 (empty -> .)

    FUNCTION                       shift and go to state 14
    FUNCTIONS                      shift and go to state 12
    empty                          shift and go to state 13

state 6

    (8) LISTDEC -> list . TYPE VARIDS semicolon
    (9) TYPE -> . int SEM_STORE_TYPE
    (10) TYPE -> . decimal SEM_STORE_TYPE
    (11) TYPE -> . bool SEM_STORE_TYPE

    int             shift and go to state 15
    decimal         shift and go to state 16
    bool            shift and go to state 17

    TYPE                           shift and go to state 18

state 7

    (4) DECLARATIONS -> empty .

    id              reduce using rule 4 (DECLARATIONS -> empty .)
    readto          reduce using rule 4 (DECLARATIONS -> empty .)
    print           reduce using rule 4 (DECLARATIONS -> empty .)
    if              reduce using rule 4 (DECLARATIONS -> empty .)
    while           reduce using rule 4 (DECLARATIONS -> empty .)
    return          reduce using rule 4 (DECLARATIONS -> empty .)
    rk              reduce using rule 4 (DECLARATIONS -> empty .)
    function        reduce using rule 4 (DECLARATIONS -> empty .)
    program         reduce using rule 4 (DECLARATIONS -> empty .)


state 8

    (3) DECLARATIONS -> LISTDEC . DECLARATIONS
    (2) DECLARATIONS -> . VARDEC DECLARATIONS
    (3) DECLARATIONS -> . LISTDEC DECLARATIONS
    (4) DECLARATIONS -> . empty
    (5) VARDEC -> . var TYPE VARIDS semicolon
    (8) LISTDEC -> . list TYPE VARIDS semicolon
    (74) empty -> .

    var             shift and go to state 9
    list            shift and go to state 6
    function        reduce using rule 74 (empty -> .)
    program         reduce using rule 74 (empty -> .)
    id              reduce using rule 74 (empty -> .)
    readto          reduce using rule 74 (empty -> .)
    print           reduce using rule 74 (empty -> .)
    if              reduce using rule 74 (empty -> .)
    while           reduce using rule 74 (empty -> .)
    return          reduce using rule 74 (empty -> .)
    rk              reduce using rule 74 (empty -> .)

    VARDEC                         shift and go to state 4
    DECLARATIONS                   shift and go to state 19
    LISTDEC                        shift and go to state 8
    empty                          shift and go to state 7

state 9

    (5) VARDEC -> var . TYPE VARIDS semicolon
    (9) TYPE -> . int SEM_STORE_TYPE
    (10) TYPE -> . decimal SEM_STORE_TYPE
    (11) TYPE -> . bool SEM_STORE_TYPE

    int             shift and go to state 15
    decimal         shift and go to state 16
    bool            shift and go to state 17

    TYPE                           shift and go to state 20

state 10

    (2) DECLARATIONS -> VARDEC DECLARATIONS .

    id              reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)
    readto          reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)
    print           reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)
    if              reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)
    while           reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)
    return          reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)
    rk              reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)
    function        reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)
    program         reduce using rule 2 (DECLARATIONS -> VARDEC DECLARATIONS .)


state 11

    (14) FUNCTION -> function . FUNCTYPE id SEM_ADD_FUNC lp FUNCPARAMETERS rp lk DECLARATIONS SEM_ADD_FUNC_START STATEMENTS rk SEM_END_FUNC
    (15) FUNCTYPE -> . void SEM_STORE_TYPE
    (16) FUNCTYPE -> . TYPE
    (9) TYPE -> . int SEM_STORE_TYPE
    (10) TYPE -> . decimal SEM_STORE_TYPE
    (11) TYPE -> . bool SEM_STORE_TYPE

    void            shift and go to state 23
    int             shift and go to state 15
    decimal         shift and go to state 16
    bool            shift and go to state 17

    TYPE                           shift and go to state 21
    FUNCTYPE                       shift and go to state 22

state 12

    (1) PROGRAM -> SEM_CODE_STARTS DECLARATIONS FUNCTIONS . program id SEM_PROGRAM_STARTS BLOCK SEM_FILL_ERAS SEM_PROGRAM_END

    program         shift and go to state 24


state 13

    (13) FUNCTIONS -> empty .

    program         reduce using rule 13 (FUNCTIONS -> empty .)


state 14

    (12) FUNCTIONS -> FUNCTION . FUNCTIONS
    (12) FUNCTIONS -> . FUNCTION FUNCTIONS
    (13) FUNCTIONS -> . empty
    (14) FUNCTION -> . function FUNCTYPE id SEM_ADD_FUNC lp FUNCPARAMETERS rp lk DECLARATIONS SEM_ADD_FUNC_START STATEMENTS rk SEM_END_FUNC
    (74) empty -> .

    function        shift and go to state 11
    program         reduce using rule 74 (empty -> .)

    FUNCTION                       shift and go to state 14
    FUNCTIONS                      shift and go to state 25
    empty                          shift and go to state 13

state 15

    (9) TYPE -> int . SEM_STORE_TYPE
    (77) SEM_STORE_TYPE -> . empty
    (74) empty -> .

    id              reduce using rule 74 (empty -> .)

    SEM_STORE_TYPE                 shift and go to state 26
    empty                          shift and go to state 27

state 16

    (10) TYPE -> decimal . SEM_STORE_TYPE
    (77) SEM_STORE_TYPE -> . empty
    (74) empty -> .

    id              reduce using rule 74 (empty -> .)

    SEM_STORE_TYPE                 shift and go to state 28
    empty                          shift and go to state 27

state 17

    (11) TYPE -> bool . SEM_STORE_TYPE
    (77) SEM_STORE_TYPE -> . empty
    (74) empty -> .

    id              reduce using rule 74 (empty -> .)

    SEM_STORE_TYPE                 shift and go to state 29
    empty                          shift and go to state 27

state 18

    (8) LISTDEC -> list TYPE . VARIDS semicolon
    (6) VARIDS -> . id SEM_ADD_VAR
    (7) VARIDS -> . id SEM_ADD_VAR comma VARIDS

    id              shift and go to state 31

    VARIDS                         shift and go to state 30

state 19

    (3) DECLARATIONS -> LISTDEC DECLARATIONS .

    id              reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)
    readto          reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)
    print           reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)
    if              reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)
    while           reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)
    return          reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)
    rk              reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)
    function        reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)
    program         reduce using rule 3 (DECLARATIONS -> LISTDEC DECLARATIONS .)


state 20

    (5) VARDEC -> var TYPE . VARIDS semicolon
    (6) VARIDS -> . id SEM_ADD_VAR
    (7) VARIDS -> . id SEM_ADD_VAR comma VARIDS

    id              shift and go to state 31

    VARIDS                         shift and go to state 32

state 21

    (16) FUNCTYPE -> TYPE .

    id              reduce using rule 16 (FUNCTYPE -> TYPE .)


state 22

    (14) FUNCTION -> function FUNCTYPE . id SEM_ADD_FUNC lp FUNCPARAMETERS rp lk DECLARATIONS SEM_ADD_FUNC_START STATEMENTS rk SEM_END_FUNC

    id              shift and go to state 33


state 23

    (15) FUNCTYPE -> void . SEM_STORE_TYPE
    (77) SEM_STORE_TYPE -> . empty
    (74) empty -> .

    id              reduce using rule 74 (empty -> .)

    SEM_STORE_TYPE                 shift and go to state 34
    empty                          shift and go to state 27

state 24

    (1) PROGRAM -> SEM_CODE_STARTS DECLARATIONS FUNCTIONS program . id SEM_PROGRAM_STARTS BLOCK SEM_FILL_ERAS SEM_PROGRAM_END

    id              shift and go to state 35


state 25

    (12) FUNCTIONS -> FUNCTION FUNCTIONS .

    program         reduce using rule 12 (FUNCTIONS -> FUNCTION FUNCTIONS .)


state 26

    (9) TYPE -> int SEM_STORE_TYPE .

    id              reduce using rule 9 (TYPE -> int SEM_STORE_TYPE .)


state 27

    (77) SEM_STORE_TYPE -> empty .

    id              reduce using rule 77 (SEM_STORE_TYPE -> empty .)


state 28

    (10) TYPE -> decimal SEM_STORE_TYPE .

    id              reduce using rule 10 (TYPE -> decimal SEM_STORE_TYPE .)


state 29

    (11) TYPE -> bool SEM_STORE_TYPE .

    id              reduce using rule 11 (TYPE -> bool SEM_STORE_TYPE .)


state 30

    (8) LISTDEC -> list TYPE VARIDS . semicolon

    semicolon       shift and go to state 36


state 31

    (6) VARIDS -> id . SEM_ADD_VAR
    (7) VARIDS -> id . SEM_ADD_VAR comma VARIDS
    (81) SEM_ADD_VAR -> . empty
    (74) empty -> .

    comma           reduce using rule 74 (empty -> .)
    semicolon       reduce using rule 74 (empty -> .)

    SEM_ADD_VAR                    shift and go to state 37
    empty                          shift and go to state 38

state 32

    (5) VARDEC -> var TYPE VARIDS . semicolon

    semicolon       shift and go to state 39


state 33

    (14) FUNCTION -> function FUNCTYPE id . SEM_ADD_FUNC lp FUNCPARAMETERS rp lk DECLARATIONS SEM_ADD_FUNC_START STATEMENTS rk SEM_END_FUNC
    (78) SEM_ADD_FUNC -> . empty
    (74) empty -> .

    lp              reduce using rule 74 (empty -> .)

    SEM_ADD_FUNC                   shift and go to state 40
    empty                          shift and go to state 41

state 34

    (15) FUNCTYPE -> void SEM_STORE_TYPE .

    id              reduce using rule 15 (FUNCTYPE -> void SEM_STORE_TYPE .)


state 35

    (1) PROGRAM -> SEM_CODE_STARTS DECLARATIONS FUNCTIONS program id . SEM_PROGRAM_STARTS BLOCK SEM_FILL_ERAS SEM_PROGRAM_END
    (76) SEM_PROGRAM_STARTS -> . empty
    (74) empty -> .

    lk              reduce using rule 74 (empty -> .)

    empty                          shift and go to state 42
    SEM_PROGRAM_STARTS             shift and go to state 43

state 36

    (8) LISTDEC -> list TYPE VARIDS semicolon .

    var             reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    list            reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    function        reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    program         reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    id              reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    readto          reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    print           reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    if              reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    while           reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    return          reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)
    rk              reduce using rule 8 (LISTDEC -> list TYPE VARIDS semicolon .)


state 37

    (6) VARIDS -> id SEM_ADD_VAR .
    (7) VARIDS -> id SEM_ADD_VAR . comma VARIDS

    semicolon       reduce using rule 6 (VARIDS -> id SEM_ADD_VAR .)
    comma           shift and go to state 44


state 38

    (81) SEM_ADD_VAR -> empty .

    comma           reduce using rule 81 (SEM_ADD_VAR -> empty .)
    semicolon       reduce using rule 81 (SEM_ADD_VAR -> empty .)


state 39

    (5) VARDEC -> var TYPE VARIDS semicolon .

    var             reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    list            reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    function        reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    program         reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    id              reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    readto          reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    print           reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    if              reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    while           reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    return          reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)
    rk              reduce using rule 5 (VARDEC -> var TYPE VARIDS semicolon .)


state 40

    (14) FUNCTION -> function FUNCTYPE id SEM_ADD_FUNC . lp FUNCPARAMETERS rp lk DECLARATIONS SEM_ADD_FUNC_START STATEMENTS rk SEM_END_FUNC

    lp              shift and go to state 45


state 41

    (78) SEM_ADD_FUNC -> empty .

    lp              reduce using rule 78 (SEM_ADD_FUNC -> empty .)


state 42

    (76) SEM_PROGRAM_STARTS -> empty .

    lk              reduce using rule 76 (SEM_PROGRAM_STARTS -> empty .)


state 43

    (1) PROGRAM -> SEM_CODE_STARTS DECLARATIONS FUNCTIONS program id SEM_PROGRAM_STARTS . BLOCK SEM_FILL_ERAS SEM_PROGRAM_END
    (20) BLOCK -> . lk STATEMENTS rk

    lk              shift and go to state 46

    BLOCK                          shift and go to state 47

state 44

    (7) VARIDS -> id SEM_ADD_VAR comma . VARIDS
    (6) VARIDS -> . id SEM_ADD_VAR
    (7) VARIDS -> . id SEM_ADD_VAR comma VARIDS

    id              shift and go to state 31

    VARIDS                         shift and go to state 48

state 45

    (14) FUNCTION -> function FUNCTYPE id SEM_ADD_FUNC lp . FUNCPARAMETERS rp lk DECLARATIONS SEM_ADD_FUNC_START STATEMENTS rk SEM_END_FUNC
    (17) FUNCPARAMETERS -> . TYPE id SEM_ADD_PARAM
    (18) FUNCPARAMETERS -> . TYPE id SEM_ADD_PARAM comma FUNCPARAMETERS
    (19) FUNCPARAMETERS -> . empty
    (9) TYPE -> . int SEM_STORE_TYPE
    (10) TYPE -> . decimal SEM_STORE_TYPE
    (11) TYPE -> . bool SEM_STORE_TYPE
    (74) empty -> .

    int             shift and go to state 15
    decimal         shift and go to state 16
    bool            shift and go to state 17
    rp              reduce using rule 74 (empty -> .)

    TYPE                           shift and go to state 49
    empty                          shift and go to state 50
    FUNCPARAMETERS                 shift and go to state 51

state 46

    (20) BLOCK -> lk . STATEMENTS rk
    (21) STATEMENTS -> . STATEMENT STATEMENTS
    (22) STATEMENTS -> . empty
    (23) STATEMENT -> . ASSIGN
    (24) STATEMENT -> . READ
    (25) STATEMENT -> . PRINT
    (26) STATEMENT -> . FUNCCALL
    (27) STATEMENT -> . CONDITION
    (28) STATEMENT -> . LOOP
    (29) STATEMENT -> . RETURN
    (74) empty -> .
    (30) ASSIGN -> . id SEM_PUSH_OPERAND LISTINDEX equal SEM_PUSH_OPERATOR EXPRESSION SEM_ASSIGN semicolon
    (33) READ -> . readto SEM_PUSH_OPERATOR lp id SEM_PUSH_OPERAND SEM_GEN_READ rp semicolon
    (34) PRINT -> . print SEM_PUSH_OPERATOR lp EXPRESSION rp SEM_PRINT semicolon
    (35) FUNCCALL -> . id SEM_VERIFY_FUNC lp SEM_GEN_ERA CALLPARAMETERS rp SEM_VERIFY_NUM_PARAMS semicolon SEM_GEN_GOSUB
    (39) CONDITION -> . if lp EXPRESSION rp SEM_GEN_GOTOF BLOCK ELSEBLOCK SEM_FILL_END
    (42) LOOP -> . while SEM_PUSH_START lp EXPRESSION rp SEM_GEN_GOTOF BLOCK SEM_FILL_LOOP
    (43) RETURN -> . return EXPRESSION SEM_RETURN semicolon

    rk              reduce using rule 74 (empty -> .)
    id              shift and go to state 58
    readto          shift and go to state 55
    print           shift and go to state 61
    if              shift and go to state 59
    while           shift and go to state 54
    return          shift and go to state 64

    STATEMENTS                     shift and go to state 52
    FUNCCALL                       shift and go to state 60
    READ                           shift and go to state 53
    PRINT                          shift and go to state 56
    RETURN                         shift and go to state 57
    ASSIGN                         shift and go to state 62
    CONDITION                      shift and go to state 63
    STATEMENT                      shift and go to state 65
    empty                          shift and go to state 66
    LOOP                           shift and go to state 67

state 47

    (1) PROGRAM -> SEM_CODE_STARTS DECLARATIONS FUNCTIONS program id SEM_PROGRAM_STARTS BLOCK . SEM_FILL_ERAS SEM_PROGRAM_END
    (109) SEM_FILL_ERAS -> . empty
    (74) empty -> .

    $end            reduce using rule 74 (empty -> .)

    SEM_FILL_ERAS                  shift and go to state 68
    empty                          shift and go to state 69

state 48
